<resources>
    <string name="app_name">CurrencyConverterApp</string>
    <string-array name="currency_codes">
        <item>CAD</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
        <item>TRY</item>
    </string-array>
    <string name="currency_converter">Currency
        Converter</string>
    <string name="an_easy_way_to_convert_currency">Exchange rates, without the noise.</string>
    <string name="brand_label">GR SPLACK / 01</string>
    <string name="begin">Let\'s Begin</string>
    <string name="choose_currency">Convert currencies</string>
    <string name="conversion_subtitle">Fast, clear exchange estimates in a few taps.</string>
    <string name="start_here">Start here</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="enter_number">Enter amount</string>
    <string name="amount_helper">Amount to convert</string>
    <string name="result_label">ESTIMATED RESULT</string>
    <string name="result_placeholder">Your converted amount will appear here.</string>
    <string name="convert">Convert</string>
    <string name="github">github.com/getrighhttt</string>
    <string name="github_url" translatable="false">https://github.com/getrighhttt</string>
    <string name="image">image</string>
</resources>
